--- a/src/app/home/b2b-flows-manage/node-properties/converter-properties/converter-properties.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/converter-properties/converter-properties.component.html
@@ -17,6 +17,18 @@
                 </button>
             </div>
         </div>
+        <div class="d-flex align-items-center justify-content-end">
+            <div class="d-flex align-items-center justify-content-end">
+                <button type="button" class="btn btn-link d-flex align-items-center" (click)="doFuzzyMapping()">
+                    <span class="dsi dsi-mapping mr-2"></span>
+                    <span>Fuzzy Mappings</span>
+                </button>
+                <button type="button" class="btn btn-link d-flex align-items-center" (click)="doClearMapping()">
+                    <span class="dsi dsi-ban mr-2"></span>
+                    <span>Clear Mappings</span>
+                </button>
+            </div>
+        </div>
         <div class="mapping-wrapper d-flex">
             <div>
                 <div class="source format-selector">
