--- a/src/app/home/b2b-flows-manage/node-properties/converter-properties/format-selector/format-selector.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/converter-properties/format-selector/format-selector.component.html
@@ -14,7 +14,7 @@
         </div>
         <div *ngIf="!formatList || formatList.length == 0"
             class="list-group-item d-flex align-items-center justify-content-between text-secondary">
-            No Data Format found for the term: <span class="fw-500 text-dark">{{searchTerm}}</span>
+            No Data Format found
         </div>
     </div>
     <div class="d-flex justify-content-center border-top">
