formula builder fix

--- a/src/app/home/b2b-flows-manage/node-properties/node-mapping/formula-editor/formula-editor.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-mapping/formula-editor/formula-editor.component.html
@@ -18,7 +18,7 @@
         </div>
         <div class="formula-canvas border-right border-left flex-wrap" (drop)="onDrop($event)"
             (dragover)="$event.preventDefault();">
-            <div class="d-flex align-items-start justify-content-start font-12 flex-wrap">
+            <div class="d-flex align-items-center font-12 text-nowrap">
                 <ng-container *ngFor="let item of usedFormulas;let fni=index">
                     <ng-container *ngTemplateOutlet="formula;context:{item:item}"></ng-container>
                     <span class="dsi dsi-minus-circle text-danger hover ml-1 font-12"
@@ -61,38 +61,38 @@
 
 
 <ng-template #formula let-item="item">
-    <div class="d-flex align-items-center justify-content-start flex-wrap">
-        <div *ngIf="!(item.type && item.properties)" class="d-flex align-items-center flex-wrap">
+    <div class="d-flex align-items-center">
+        <div *ngIf="!(item.type && item.properties)" class="d-flex align-items-center">
             <span class="name text-accent fw-500">{{item.name}}</span>(
             <ng-container *ngFor="let p of item.params;let lp=last">
                 <ng-container *ngIf="!p.substituteVal && !p.substituteFn">
                     <span (dragenter)="p.over=true" (dragleave)="p.over=false" (dragover)="$event.preventDefault();"
-                        (drop)="onParamDrop($event,item,p)" [class.bg-accent]="p.over" class="text-success"
+                        (drop)="onParamDrop($event,item,p)" [class.bg-accent]="p.over" class="text-nowrap text-success"
                         *ngIf="p.type == 'String'">
                         "{{p.name}}"
                     </span>
                     <span (dragenter)="p.over=true" (dragleave)="p.over=false" (dragover)="$event.preventDefault();"
-                        (drop)="onParamDrop($event,item,p)" [class.bg-accent]="p.over" class="text-warning"
+                        (drop)="onParamDrop($event,item,p)" [class.bg-accent]="p.over" class="text-nowrap text-warning"
                         *ngIf="p.type == 'Number'">
                         {{p.name}}
                     </span>
                     <span (dragenter)="p.over=true" (dragleave)="p.over=false" (dragover)="$event.preventDefault();"
-                        (drop)="onParamDrop($event,item,p)" [class.bg-accent]="p.over" class="text-info"
+                        (drop)="onParamDrop($event,item,p)" [class.bg-accent]="p.over" class="text-nowrap text-info"
                         *ngIf="p.type == 'Boolean'">
                         {{p.name}}
                     </span>
                     <span (dragenter)="p.over=true" (dragleave)="p.over=false" (dragover)="$event.preventDefault();"
-                        (drop)="onParamDrop($event,item,p)" [class.bg-accent]="p.over" class="text-primary"
+                        (drop)="onParamDrop($event,item,p)" [class.bg-accent]="p.over" class="text-nowrap text-primary"
                         *ngIf="p.type == 'Date'">
                         {{p.name}}
                     </span>
                     <span (dragenter)="p.over=true" (dragleave)="p.over=false" (dragover)="$event.preventDefault();"
-                        (drop)="onParamDrop($event,item,p)" [class.bg-accent]="p.over" class="text-grey"
+                        (drop)="onParamDrop($event,item,p)" [class.bg-accent]="p.over" class="text-nowrap text-grey"
                         *ngIf="p.type == 'Object'">
                         {{'{ '+p.name+' }'}}
                     </span>
                     <span (dragenter)="p.over=true" (dragleave)="p.over=false" (dragover)="$event.preventDefault();"
-                        (drop)="onParamDrop($event,item,p)" [class.bg-accent]="p.over" class="text-grey"
+                        (drop)="onParamDrop($event,item,p)" [class.bg-accent]="p.over" class="text-nowrap text-grey"
                         *ngIf="p.type == 'Array'">
                         {{'[ '+p.name+' ]'}}
                     </span>
@@ -102,22 +102,22 @@
                     <span class="dsi dsi-close font-12 text-danger hover ml-1" (click)="p.substituteFn=null"></span>
                 </ng-container>
                 <ng-container *ngIf="p.substituteVal">
-                    <span class="text-success" *ngIf="p.type == 'String'">
+                    <span class="text-nowrap text-success" *ngIf="p.type == 'String'">
                         {{p.substituteVal.name}}
                     </span>
-                    <span class="text-warning" *ngIf="p.type == 'Number'">
+                    <span class="text-nowrap text-warning" *ngIf="p.type == 'Number'">
                         {{p.substituteVal.name}}
                     </span>
-                    <span class="text-info" *ngIf="p.type == 'Boolean'">
+                    <span class="text-nowrap text-info" *ngIf="p.type == 'Boolean'">
                         {{p.substituteVal.name}}
                     </span>
-                    <span class="text-primary" *ngIf="p.type == 'Date'">
+                    <span class="text-nowrap text-primary" *ngIf="p.type == 'Date'">
                         {{p.substituteVal.name}}
                     </span>
-                    <span class="text-grey" *ngIf="p.type == 'Object'">
+                    <span class="text-nowrap text-grey" *ngIf="p.type == 'Object'">
                         {{p.substituteVal.name}}
                     </span>
-                    <span class="text-grey" *ngIf="p.type == 'Array'">
+                    <span class="text-nowrap text-grey" *ngIf="p.type == 'Array'">
                         {{p.substituteVal.name}}
                     </span>
                     <span class="dsi dsi-close font-12 text-danger hover ml-1" (click)="p.substituteVal=null"></span>
@@ -128,22 +128,22 @@
         </div>
         <!-- <span class="dsi dsi-minus-circle text-danger hover ml-1 font-12" (click)="removeUsedFn(item,fni)"></span> -->
         <ng-container *ngIf="item.type && item.properties">
-            <span class="text-success" *ngIf="item.type == 'String'">
+            <span class="text-nowrap text-success" *ngIf="item.type == 'String'">
                 {{item.name}}
             </span>
-            <span class="text-warning" *ngIf="item.type == 'Number'">
+            <span class="text-nowrap text-warning" *ngIf="item.type == 'Number'">
                 {{item.name}}
             </span>
-            <span class="text-info" *ngIf="item.type == 'Boolean'">
+            <span class="text-nowrap text-info" *ngIf="item.type == 'Boolean'">
                 {{item.name}}
             </span>
-            <span class="text-primary" *ngIf="item.type == 'Date'">
+            <span class="text-nowrap text-primary" *ngIf="item.type == 'Date'">
                 {{item.name}}
             </span>
-            <span class="text-grey" *ngIf="item.type == 'Object'">
+            <span class="text-nowrap text-grey" *ngIf="item.type == 'Object'">
                 {{item.name}}
             </span>
-            <span class="text-grey" *ngIf="item.type == 'Array'">
+            <span class="text-nowrap text-grey" *ngIf="item.type == 'Array'">
                 {{item.name}}
             </span>
         </ng-container>
