--- a/src/app/home/b2b-flows-manage/node-properties/converter-properties/converter-properties.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/converter-properties/converter-properties.component.html
@@ -73,7 +73,7 @@
                                 <!-- <span class="font-16 fw-500 text-dark mx-2">:</span>
                                 <span class="font-12 fw-500 text-accent mr-2">{{sourceFormat.name}}</span> -->
                                 <span class="dsi dsi-trash font-14 fw-500 text-danger hover"
-                                    (click)="sourceFormat=null"></span>
+                                    (click)="sourceFormat=null;removeSourceNode()"></span>
                             </div>
                         </div>
                         <odp-source-selector *ngIf="!sourceFormat" [currNode]="data"
@@ -86,7 +86,7 @@
                                     <div class="field-type mr-2">
                                         <odp-field-type [field]="def" [onMapper]="true"></odp-field-type>
                                     </div>
-                                    <div class="field-key text-truncate">{{def.key}}</div>
+                                    <div class="field-key text-truncate">{{def.name}}</div>
                                     <div class="mapping-line flex-fill"
                                         [ngClass]="{'border-accent border-top':isSourceMapped(def)}"></div>
                                 </div>
@@ -112,7 +112,7 @@
                         <div class="d-flex align-items-center" *ngIf="targetFormat">
                             <span class="font-12 fw-500 text-accent mr-2">{{targetFormat.name}}</span>
                             <span class="dsi dsi-trash font-14 fw-500 text-danger hover"
-                                (click)="targetFormat=null"></span>
+                                (click)="targetFormat=null;removeTarget()"></span>
                         </div>
                     </div>
                     <odp-format-selector *ngIf="!targetFormat" [(format)]="targetFormat"></odp-format-selector>
@@ -128,7 +128,7 @@
                                 <div class="field-type mr-2">
                                     <odp-field-type [field]="def" [onMapper]="true"></odp-field-type>
                                 </div>
-                                <div class="field-key text-truncate">{{def.key}}</div>
+                                <div class="field-key text-truncate">{{def.name}}</div>
                                 <a href="#" (click)="$event.preventDefault();def._showFn=true">
                                     <i class="hover mx-2"
                                         [ngClass]="{'text-success':isValidFunction(def),'text-danger':!isValidFunction(def)}">f(x)</i>
@@ -139,7 +139,7 @@
                                 <div class="mapped-sources d-flex ml-3 text-secondary font-12">
                                     <div *ngFor="let source of def.source"
                                         class="border rounded px-1 mr-1 d-flex align-items-center">
-                                        <span>{{source.key}}</span>
+                                        <span>{{source.name}}</span>
                                         <span (click)="removeSource(def,source)"
                                             class="dsi dsi-minus-circle text-danger hover ml-1 font-14"></span>
                                     </div>
