--- a/src/app/home/nodes/node-details/node-details.component.html
+++ b/src/app/home/nodes/node-details/node-details.component.html
@@ -36,7 +36,7 @@
         <div class="d-flex flex-column px-4 pb-4">
             <div class="d-flex flex-column w-100 h-100 bg-white rounded border p-4">
                 <odp-user-node [edit]="edit" [options]="api" [dataStructure]="dataStructure"
-                    *ngIf="nodeType === 'USER'"></odp-user-node>
+                    *ngIf="nodeType === 'USER'  && node.name' && node.name'"></odp-user-node>
 
                 <odp-event-node [edit]="edit" [nodeDetails]="node" *ngIf="nodeType === 'EVENT  && node.name'"
                     (onChangeData)="onChangeData($event)"></odp-event-node>
