--- a/src/app/utils/autocomplete-on-edit/autocomplete-on-edit.component.html
+++ b/src/app/utils/autocomplete-on-edit/autocomplete-on-edit.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div class="input-container" [ngClass]="{'disabled-input': !editEnabled}">
+  <div class="input-container" [ngClass]="{'disabled-input': !editEnabled,'bg-white':editEnabled}">
     <input #styledInputText [(ngModel)]="value" (ngModelChange)="onValueChange()" (input)="onValueChange($event)"
       [ngbTypeahead]="ngbTypeahead || search" (scroll)="handleScroll($event)"
       [resultFormatter]="resultFormatter || formatter" [inputFormatter]="inputFormatter || formatter"
