--- a/src/app/home/b2b-flows-manage/flow-contants/flow-contants.component.scss
+++ b/src/app/home/b2b-flows-manage/flow-contants/flow-contants.component.scss
@@ -9,15 +9,23 @@
         }
 
         .grid-cell {
-            min-width: 120px;
-            max-width: 120px;
             min-height: 32px;
             max-height: 32px;
             padding: 5px;
+        }
+
+        .grid-cell:not(.flex-fill) {
+            min-width: 80px;
+            max-width: 80px;
 
             &.name {
-                min-width: 220px;
-                max-width: 220px;
+                min-width: 200px;
+                max-width: 200px;
+            }
+
+            &.value {
+                min-width: 200px;
+                max-width: 200px;
             }
         }
     }
