--- a/src/app/home/b2b-flows-manage/flow-contants/flow-contants.component.html
+++ b/src/app/home/b2b-flows-manage/flow-contants/flow-contants.component.html
@@ -31,7 +31,7 @@
                 </div>
             </div>
             <div class="grid-row" *ngIf="!constantList || constantList.length==0">
-                <div class="grid-cell">No Records</div>
+                <div class="grid-cell flex-fill">No Records</div>
             </div>
         </div>
     </div>
