--- a/src/app/home/b2b-flows-manage/flow-volume-mounts/flow-volume-mounts.component.html
+++ b/src/app/home/b2b-flows-manage/flow-volume-mounts/flow-volume-mounts.component.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
             <div class="grid-row" *ngIf="!volumeMounts || volumeMounts.length==0">
-                <div class="grid-cell">No Records</div>
+                <div class="grid-cell flex-fill">No Records</div>
             </div>
         </div>
     </div>
