--- a/src/app/home/b2b-flows-manage/path-properties/path-condition-creator/path-condition-creator.component.html
+++ b/src/app/home/b2b-flows-manage/path-properties/path-condition-creator/path-condition-creator.component.html
@@ -9,7 +9,7 @@
                 *ngFor="let item of segments;let i=index;let l=last">{{item.label}}</span>
         </div> -->
         <!-- <span class="text-dark" *ngIf="value">Re-Configure</span> -->
-        <span class="mr-1 fw-600 hover">{{value}}</span>
+        <span class="text-break mr-1 fw-600 hover">{{value}}</span>
         <div class="d-flex align-items-center justify-content-end">
             <span *ngIf="value"
                 class="icon dsi dsi-minus-circle text-danger hover d-flex align-items-center justify-content-center"
