--- a/src/app/apps/apps.component.html
+++ b/src/app/apps/apps.component.html
@@ -182,7 +182,7 @@
           <div *ngIf="hasConnectorsPermission" #pfRoute="routerLinkActive"
           class="icon-block d-flex align-items-center my-3"
           [ngClass]="{'justify-content-between':showSideNav, 'justify-content-center':!showSideNav}"
-          routerLinkActive="text-primary bg-white active" [routerLink]="['processFlow']" id="_con">
+          routerLinkActive="text-primary bg-white active" [routerLink]="['processflow']" id="_con">
           <div class="d-flex align-items-center">
             <span [ngClass]="{'nav-inactive':!pfRoute.isActive}" class="dsi dsi-connector"></span>
             <span *ngIf="showSideNav" class="text items font-14" [ngClass]="{
